# aixos

./: .gitignore  .gitmodules  Cargo.toml  README.md  RELEASE.md  fix_kani.py  rust-toolchain.toml  sovereignty.ax
.cargo/: config.toml
.github/workflows/: ci.yml
boot/: aixos-boot.ax  aixos-boot.ld  aixos.elf  aixos.img  boot.s  head_pe.s  virt.dtb
crates/aixos-axfs/: Cargo.toml
crates/aixos-axfs/src/: lib.rs
crates/aixos-edisondb/: Cargo.toml
crates/aixos-edisondb/src/: lib.rs
crates/aixos-gpu/: Cargo.toml
crates/aixos-gpu/src/: commands.rs  cursor.rs  desktop.ax  desktop.rs  draw.rs  font.rs  framebuffer.rs  gpu.ax  lib.rs  logo.rs  ramfb.rs  virtio_gpu.rs  virtqueue.rs
crates/aixos-haniel/: Cargo.toml
crates/aixos-haniel/src/: lib.rs
crates/aixos-identity/: Cargo.toml
crates/aixos-identity/src/: ceremony.ax  lib.rs
crates/aixos-init/: Cargo.toml  build.rs
crates/aixos-init/src/: bastion_pd.rs  boot_mode.rs  lib.rs  main.rs
crates/aixos-input/: Cargo.toml
crates/aixos-input/src/: input.ax  lib.rs  mouse.rs  uart_kbd.rs  virtio_input.rs
crates/aixos-kernel/: Cargo.toml
crates/aixos-kernel/src/: alloc.rs  bastion.ax  boot.rs  lib.rs  virtio_blk.rs
crates/aixos-net/: Cargo.toml
crates/aixos-net/src/: awp_lite.ax  lib.rs  virtio_net.rs  wireguard_stub.rs
crates/aixos-shell/: Cargo.toml
crates/aixos-shell/src/: axon_interp.rs  layout.ax  lib.rs  shell.ax
