[package]
name = "aixos-init"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "aixos_init"
path = "src/lib.rs"

[[bin]]
name = "aixos"
path = "src/main.rs"

[dependencies]
aixos-kernel = { path = "../aixos-kernel" }
aixos-identity = { path = "../aixos-identity" }
aixos-net = { path = "../aixos-net" }
aixos-shell = { path = "../aixos-shell" }
aixos-edisondb = { path = "../aixos-edisondb" }
aixos-gpu = { path = "../aixos-gpu" }
aixos-input = { path = "../aixos-input" }
